# xcreport

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: args.rs  cli.rs  data.rs  df.rs  err.rs  errors.rs  fs.rs  main.rs  model.rs
src/mods/: errors.rs
