[package]
authors = ["Kenan Alizadeh <kananalizade@gmail.com>"]
name = "xctest_rs"
description = "A Tool for delivering squad-specific code coverage report."
version = "0.1.1"
edition = "2021"

[[bin]]
name = "xctest"
path = "src/main.rs"

[profile. release]
strip = true
opt-level = "z"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.35.4", features = ["lazy", "json", "csv", "round_series"] }
clap = { version="4.4.11", features = ["derive"] }
home = "0.5.9"
thiserror = "1.0.51"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"