[package]
authors = ["Kenan Alizadeh <kananalizade@gmail.com>"]
name = "xcreport"
description = "A Tool for delivering squad-specific code coverage report."
version = "1.0.0"
edition = "2021"

[[bin]]
name = "xcreport"
path = "src/main.rs"

[profile. release]
strip = true
opt-level = "z"

[dependencies]
polars = { version = "0.36.2", features = ["lazy", "json", "csv", "round_series"] }
clap = { version="4.4.11", features = ["derive"] }
home = "0.5.9"
thiserror = "1.0.51"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
